--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body,html {
 	background-color: #FFF;
 }
 header {
-    background: #AEC6CF;
+    background: #a23fe0;
     padding: 20px 30px;
     max-width: 940px;
     margin: auto;
@@ -74,7 +74,7 @@ main section {
 	
 }
 footer {
-	background: #AEC6CF;
+	background: #a23fe0;
 	max-width: 1000px;
 	margin: auto;
 	clear: both;
